crates/barnum_engine/tests/snapshots/engine_snapshot_tests__flatten_snapshots@foreach_empty.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
assertion_line: 41
expression: flat_config
input_file: crates/barnum_engine/tests/advance/foreach_empty.json
---
FlatConfig {
    entries: [
        Action(
            ForEach {
                body: ActionId(
                    1,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    0,
                ),
            },
        ),
    ],
    handlers: [
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./handler.ts",
                ),
                func: FuncName(
                    "run",
                ),
                step_config_schema: None,
                value_schema: None,
            },
        ),
    ],
    workflow_root: ActionId(
        0,
    ),
}
