crates/barnum_engine/tests/snapshots/engine_snapshot_tests__flatten_snapshots@foreach_with_chain_body.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
expression: flat_config
input_file: crates/barnum_engine/tests/advance/foreach_with_chain_body.json
---
FlatConfig {
    entries: [
        Action(
            ForEach {
                body: ActionId(
                    1,
                ),
            },
        ),
        Action(
            Chain {
                rest: ActionId(
                    3,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    1,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    0,
                ),
            },
        ),
    ],
    handlers: [
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./process.ts",
                ),
                func: FuncName(
                    "process",
                ),
            },
        ),
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./validate.ts",
                ),
                func: FuncName(
                    "validate",
                ),
            },
        ),
    ],
    workflow_root: ActionId(
        0,
    ),
}
