crates/barnum_engine/tests/snapshots/engine_snapshot_tests__flatten_snapshots@loop_body.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
assertion_line: 42
expression: flat_config
input_file: crates/barnum_engine/tests/advance/loop_body.json
---
FlatConfig {
    entries: [
        Action(
            Loop {
                body: ActionId(
                    1,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    0,
                ),
            },
        ),
    ],
    handlers: [
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./handler.ts",
                ),
                func: FuncName(
                    "run",
                ),
            },
        ),
    ],
    workflow_root: ActionId(
        0,
    ),
}
