crates/barnum_engine/tests/snapshots/engine_snapshot_tests__flatten_snapshots@loop_with_chain_body.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
expression: flat_config
input_file: crates/barnum_engine/tests/advance/loop_with_chain_body.json
---
FlatConfig {
    entries: [
        Action(
            Loop {
                body: ActionId(
                    1,
                ),
            },
        ),
        Action(
            Chain {
                rest: ActionId(
                    3,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    1,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    0,
                ),
            },
        ),
    ],
    handlers: [
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./decide.ts",
                ),
                func: FuncName(
                    "decide",
                ),
            },
        ),
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./check.ts",
                ),
                func: FuncName(
                    "check",
                ),
            },
        ),
    ],
    workflow_root: ActionId(
        0,
    ),
}
