crates/barnum_engine/tests/snapshots/engine_snapshot_tests__flatten_snapshots@nested_chain_in_parallel.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
assertion_line: 42
expression: flat_config
input_file: crates/barnum_engine/tests/advance/nested_chain_in_parallel.json
---
FlatConfig {
    entries: [
        Action(
            All {
                count: Count(
                    2,
                ),
            },
        ),
        ChildRef {
            action: ActionId(
                3,
            ),
        },
        Action(
            Invoke {
                handler: HandlerId(
                    2,
                ),
            },
        ),
        Action(
            Chain {
                rest: ActionId(
                    5,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    0,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    1,
                ),
            },
        ),
    ],
    handlers: [
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./a.ts",
                ),
                func: FuncName(
                    "a",
                ),
            },
        ),
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./b.ts",
                ),
                func: FuncName(
                    "b",
                ),
            },
        ),
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./c.ts",
                ),
                func: FuncName(
                    "c",
                ),
            },
        ),
    ],
    workflow_root: ActionId(
        0,
    ),
}
