crates/barnum_engine/tests/snapshots/engine_snapshot_tests__flatten_snapshots@parallel_empty.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
assertion_line: 41
expression: flat_config
input_file: crates/barnum_engine/tests/advance/parallel_empty.json
---
FlatConfig {
    entries: [
        Action(
            Parallel {
                count: Count(
                    0,
                ),
            },
        ),
    ],
    handlers: [],
    workflow_root: ActionId(
        0,
    ),
}
