crates/barnum_engine/tests/snapshots/engine_snapshot_tests__flatten_snapshots@parallel_three.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
assertion_line: 41
expression: flat_config
input_file: crates/barnum_engine/tests/advance/parallel_three.json
---
FlatConfig {
    entries: [
        Action(
            Parallel {
                count: Count(
                    3,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    0,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    1,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    2,
                ),
            },
        ),
    ],
    handlers: [
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./a.ts",
                ),
                func: FuncName(
                    "a",
                ),
                step_config_schema: None,
                value_schema: None,
            },
        ),
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./b.ts",
                ),
                func: FuncName(
                    "b",
                ),
                step_config_schema: None,
                value_schema: None,
            },
        ),
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./c.ts",
                ),
                func: FuncName(
                    "c",
                ),
                step_config_schema: None,
                value_schema: None,
            },
        ),
    ],
    workflow_root: ActionId(
        0,
    ),
}
