crates/barnum_engine/tests/snapshots/engine_snapshot_tests__flatten_snapshots@single_invoke.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
assertion_line: 43
expression: flat_config
input_file: crates/barnum_engine/tests/advance/single_invoke.json
---
FlatConfig {
    entries: [
        Action(
            Invoke {
                handler: HandlerId(
                    0,
                ),
            },
        ),
    ],
    handlers: [
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./handler.ts",
                ),
                func: FuncName(
                    "run",
                ),
                input_schema: None,
                output_schema: None,
            },
        ),
    ],
    workflow_root: ActionId(
        0,
    ),
}
