crates/barnum_engine/tests/snapshots/engine_snapshot_tests__flatten_snapshots@step_named.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
expression: flat_config
input_file: crates/barnum_engine/tests/advance/step_named.json
---
FlatConfig {
    entries: [
        Action(
            Step {
                target: ActionId(
                    1,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    0,
                ),
            },
        ),
    ],
    handlers: [
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./setup.ts",
                ),
                func: FuncName(
                    "run",
                ),
            },
        ),
    ],
    workflow_root: ActionId(
        0,
    ),
}
