crates/barnum_engine/tests/snapshots/engine_snapshot_tests__flatten_snapshots@step_root_recursive.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
assertion_line: 41
expression: flat_config
input_file: crates/barnum_engine/tests/advance/step_root_recursive.json
---
FlatConfig {
    entries: [
        Action(
            Loop {
                body: ActionId(
                    1,
                ),
            },
        ),
        Action(
            Chain {
                rest: ActionId(
                    3,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    1,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    0,
                ),
            },
        ),
    ],
    handlers: [
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./decide.ts",
                ),
                func: FuncName(
                    "decide",
                ),
                step_config_schema: None,
                value_schema: None,
            },
        ),
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./process.ts",
                ),
                func: FuncName(
                    "process",
                ),
                step_config_schema: None,
                value_schema: None,
            },
        ),
    ],
    workflow_root: ActionId(
        0,
    ),
}
